<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.auth.SignupActivity">

    <TextView
        android:id="@+id/AppNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/UserNameText"/>

    <EditText
        android:id="@+id/UserNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:autofillHints="username"
        android:layout_marginHorizontal="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="169dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/EmailText"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/EmailText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:autofillHints="username"
        android:layout_marginHorizontal="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/UserNameText"
        app:layout_constraintBottom_toTopOf="@id/PasswordText"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/PasswordText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:layout_marginHorizontal="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EmailText"
        app:layout_constraintBottom_toTopOf="@id/SignUpButton"/>
    <TextView
        android:id="@+id/PasswordHintText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password_hint"
        android:textSize="12sp"
        android:textColor="#9E9E9E"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PasswordText"
        app:layout_constraintBottom_toTopOf="@id/SignUpButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/SignUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#1E1E1E"
        android:text="@string/sign_up_button"
        android:layout_marginHorizontal="48dp"
        app:cornerRadius="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PasswordHintText" />

    <View
        android:id="@+id/DivideLeft"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#E0E0E0"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="@id/SignUpButton"
        app:layout_constraintEnd_toStartOf="@id/DivideText"
        app:layout_constraintTop_toTopOf="@id/DivideText"
        app:layout_constraintBottom_toBottomOf="@id/DivideText" />

    <TextView
        android:id="@+id/DivideText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_or"
        android:textSize="12sp"
        android:textColor="#9E9E9E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SignUpButton"
        app:layout_constraintBottom_toTopOf="@id/GoogleSignUpButton"/>

    <View
        android:id="@+id/DivideRight"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#E0E0E0"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/DivideText"
        app:layout_constraintEnd_toEndOf="@id/SignUpButton"
        app:layout_constraintTop_toTopOf="@id/DivideText"
        app:layout_constraintBottom_toBottomOf="@id/DivideText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/GoogleSignUpButton"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:text="@string/sign_up_google"
        android:textColor="#6E6E6E"
        android:layout_marginTop="32dp"
        app:cornerRadius="4dp"
        app:layout_constraintStart_toStartOf="@id/SignUpButton"
        app:layout_constraintEnd_toEndOf="@id/SignUpButton"
        app:layout_constraintTop_toBottomOf="@id/SignUpButton"
        app:icon="@drawable/google_icon"
        app:iconTint="@null"
        app:iconGravity="start" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/KakaoLoginButton"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFE812"
        android:text="@string/sign_up_kakao"
        android:textColor="#6E6E6E"
        app:cornerRadius="4dp"
        app:layout_constraintStart_toStartOf="@id/SignUpButton"
        app:layout_constraintEnd_toEndOf="@id/SignUpButton"
        app:layout_constraintTop_toBottomOf="@id/GoogleSignUpButton"
        app:icon="@drawable/kakaotalk_icon"
        app:iconTint="@null"
        app:iconGravity="start" />

    <TextView
        android:id="@+id/SignUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/has_account"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/LogInButton"
        app:layout_constraintTop_toTopOf="@id/LogInButton"
        app:layout_constraintBottom_toBottomOf="@id/LogInButton"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/LogInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_here"
        android:textSize="12sp"
        android:textColor="#6DB2F6"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:backgroundTint="@android:color/transparent"
        android:paddingVertical="1dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="30dp"
        android:padding="0dp"
        app:layout_constraintStart_toEndOf="@id/SignUpText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
