<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.auth.ForgotPasswordActivity">

    <TextView
        android:id="@+id/AppNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/RenewPasswordText"/>

    <TextView
        android:id="@+id/RenewPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_title"
        style="@style/Text.Caption"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AppNameText"
        app:layout_constraintBottom_toTopOf="@id/RenewPasswordSubText"/>

    <TextView
        android:id="@+id/RenewPasswordSubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_subtitle"
        style="@style/Text.Caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RenewPasswordText"
        app:layout_constraintBottom_toTopOf="@id/EmailText"/>

    <EditText
        android:id="@+id/EmailText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/forgot_email_hint"
        android:inputType="textEmailAddress"
        android:autofillHints="username"
        android:layout_marginHorizontal="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RenewPasswordSubText"
        app:layout_constraintBottom_toTopOf="@id/SendVerifyButton"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/SendVerifyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#1E1E1E"
        android:text="@string/forgot_send_code"
        android:layout_marginHorizontal="48dp"
        android:layout_marginVertical="20dp"
        app:cornerRadius="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EmailText" />


</androidx.constraintlayout.widget.ConstraintLayout>
