<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Card.Base"
    android:id="@+id/cardFeed"
    app:strokeWidth="0dp"
    app:strokeColor="@android:color/transparent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentFeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_m">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="@dimen/avatar_s"
            android:layout_height="@dimen/avatar_s"
            android:src="@drawable/person_icon"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Circle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvPoster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/feed_poster"
            style="@style/Text.Body"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/ivProfileImage"
            app:layout_constraintTop_toTopOf="@id/ivProfileImage"
            app:layout_constraintEnd_toStartOf="@id/btnMore"
            android:layout_marginStart="@dimen/space_m" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/feed_title"
            style="@style/Text.Caption"
            app:layout_constraintStart_toStartOf="@id/tvPoster"
            app:layout_constraintTop_toBottomOf="@id/tvPoster" />

        <TextView
            android:id="@+id/tvDash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/feed_dash"
            style="@style/Text.Caption"
            android:layout_marginHorizontal="@dimen/space_s"
            app:layout_constraintStart_toEndOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvPoster"/>

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/feed_author"
            style="@style/Text.Caption"
            android:layout_marginHorizontal="6dp"
            app:layout_constraintStart_toEndOf="@id/tvDash"
            app:layout_constraintTop_toBottomOf="@id/tvPoster"/>

        <ImageButton
            android:id="@+id/btnMore"
            style="?attr/borderlessButtonStyle"
            android:layout_width="@dimen/avatar_s"
            android:layout_height="@dimen/avatar_s"
            android:contentDescription="@string/desc_more"
            android:src="@drawable/more_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcPostImage"
            style="@style/Card.Base"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/space_xxs"
            android:visibility="gone"
            tools:visibility="visible"
            app:shapeAppearanceOverlay="@style/Shape.Round12"
            app:strokeWidth="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintDimensionRatio="1:1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/vpImages"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"/>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabDots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="0dp"
                    android:backgroundTint="@android:color/transparent"
                    app:tabIndicator="@null"
                    app:tabIndicatorHeight="0dp"
                    app:tabRippleColor="@null"
                    app:tabGravity="center"
                    app:tabMode="scrollable"
                    app:tabPaddingStart="0dp"
                    app:tabPaddingEnd="0dp"
                    app:tabMinWidth="0dp"
                    app:tabMaxWidth="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xs"
            android:text="@string/feed_content"
            style="@style/Text.Body"
            android:lineSpacingExtra="@dimen/space_xxs"
            android:ellipsize="end"
            android:maxLines="3"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toBottomOf="@id/mcPostImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/actionBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xxs"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/tvContent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLike"
                style="@style/Btn.Tonal.TextIcon"
                android:layout_width="wrap_content"
                android:text="@string/like"
                app:icon="@drawable/like_icon"/>

            <Space
                android:layout_width="@dimen/space_l"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBookReview"
                style="@style/Btn.Tonal.TextIcon"
                android:layout_width="wrap_content"
                android:text="@string/review"
                app:icon="@drawable/comment_icon"/>

            <Space
                android:layout_width="@dimen/space_l"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnExchange"
                style="@style/Btn.Tonal.TextIcon"
                android:layout_width="wrap_content"
                android:text="@string/exchange"
                app:icon="@drawable/exchange_icon"/>

            <Space
                android:layout_width="@dimen/space_l"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAdd"
                style="@style/Btn.Tonal.TextIcon"
                android:layout_width="wrap_content"
                android:text="@string/bookmark"
                app:icon="@drawable/add_icon"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xs"
            android:text="@string/feed_time"
            style="@style/Text.Caption"
            android:textColor="@color/grey"
            android:ellipsize="end"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toBottomOf="@id/actionBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
