<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/nav_home">

    <action
        android:id="@+id/action_global_to_barterDetailFragment"
        app:destination="@id/barterDetailFragment">

        <argument
            android:name="userBookId"
            app:argType="integer" />
    </action>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.librarytogether.feature.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.librarytogether.feature.search.SearchFragment"
        android:label="@string/nav_search"
        tools:layout="@layout/fragment_search"/>

    <fragment
        android:id="@+id/nav_explore"
        android:name="com.example.librarytogether.feature.explore.ExploreFragment"
        android:label="@string/nav_explore"
        tools:layout="@layout/fragment_explore"/>

    <fragment
        android:id="@+id/nav_notification"
        android:name="com.example.librarytogether.feature.notification.NotificationFragment"
        android:label="@string/nav_notification"
        tools:layout="@layout/fragment_notification"/>

    <fragment
        android:id="@+id/nav_library"
        android:name="com.example.librarytogether.feature.library.LibraryFragment"
        android:label="@string/nav_library"
        tools:layout="@layout/fragment_library">

        <action
            android:id="@+id/action_libraryFragment_to_writeReviewFragment"
            app:destination="@id/writeReviewFragment" />

        <action
            android:id="@+id/action_libraryFragment_to_addBookFragment"
            app:destination="@id/addBookFragment" />
    </fragment>

    <fragment
        android:id="@+id/writeReviewFragment"
        android:name="com.example.librarytogether.feature.library.WriteReviewFragment"
        android:label="WriteReviewFragment"
        tools:layout="@layout/fragment_write_review" />

    <fragment
        android:id="@+id/addBookFragment"
        android:name="com.example.librarytogether.feature.library.AddBookFragment"
        android:label="AddBookFragment"
        tools:layout="@layout/fragment_add_book" />


    <fragment
        android:id="@+id/write_review_fragment"
        android:name="com.example.librarytogether.feature.library.WriteReviewFragment"
        android:label=""/>

    <navigation
        android:id="@+id/nav_barter_flow"
        app:startDestination="@id/barterDetailFragment">

        <fragment
            android:id="@+id/barterDetailFragment"
            android:name="com.example.librarytogether.feature.barter.BarterDetailFragment"
            android:label="BarterDetailFragment"
            tools:layout="@layout/fragment_barter_detail">

            <argument
                android:name="userBookId"
                app:argType="integer" />

            <action
                android:id="@+id/action_barterDetailFragment_to_selectMyBookFragment"
                app:destination="@id/selectMyBookFragment" />
        </fragment>

        <fragment
            android:id="@+id/selectMyBookFragment"
            android:name="com.example.librarytogether.feature.barter.SelectMyBookFragment"
            android:label="SelectMyBookFragment"
            tools:layout="@layout/fragment_select_my_book">
        </fragment>

    </navigation>

</navigation>
